# claudeManage

./: .gitignore  note.md
.claude/: settings.local.json
.serena/: project.yml
.serena/memories/: gastown_architecture.md  implementation_progress.md  project_overview.md  project_structure.md  style_conventions.md  suggested_commands.md  task_completion_checklist.md
docs/: ai-inbox-v2-architecture.md  gastown-comprehensive-for-claudemanage.md  gastown-for-claudemanage.md  implementation-tasklist.md
townui/: .gitignore  CLAUDE.md  create-icon.ps1  index.html  package.json  tailwind.config.js
townui/.serena/: project.yml
townui/.serena/memories/: townui-architecture-full.md  townui-user-runtime-preferences.md
townui/src/: App.tsx  index.css  main.tsx
townui/src-tauri/: Cargo.toml  out.txt  tauri.conf.json
townui/src-tauri/icons/: icon.icns
townui/src-tauri/src/: git.rs  lib.rs  main.rs  state.rs  templates.rs
townui/src-tauri/src/commands/: actors.rs  ai_inbox.rs  audit.rs  convoys.rs  crews.rs  dogs.rs  handoffs.rs  hooks.rs  mod.rs  operations.rs  refinery.rs  rigs.rs  seed.rs  settings.rs  supervisor.rs  tasks.rs  templates.rs  terminal.rs  workers.rs  workflows.rs
townui/src-tauri/src/models/: actor.rs  audit.rs  convoy.rs  crew.rs  dog.rs  handoff.rs  hook.rs  mod.rs  rig.rs  settings.rs  task.rs  worker.rs  workflow.rs
townui/src/components/: ActorPanel.tsx  AuditTimeline.tsx  ConvoyBoard.tsx  CrewCreateDialog.tsx  CrewList.tsx  ErrorBoundary.tsx  FailureCenter.tsx  HandoffCenter.tsx  HealthDashboard.tsx  HookInbox.tsx  Layout.tsx  RigList.tsx  (+14 more)
(+16 files in other folders)
