[package]
name = "townui"
version = "0.1.0"
edition = "2021"

[lib]
name = "townui_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
portable-pty = "0.8"
tokio = "1.49.0"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
notify = "6"
